<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:checkableBehavior="single">
		<item
			android:id="@+id/menu_home_item"
			android:checked="true"
			android:icon="@drawable/ic_home_icon"
			android:title="@string/home" />
	</group>

	<group android:checkableBehavior="single">
		<item
			android:id="@+id/driver_dashboard_item"
			android:icon="@drawable/ic_driver_icon"
			android:title="@string/driver_dashboard" />
		<item
			android:id="@+id/cars_item"
			android:icon="@drawable/ic_cars_garage"
			android:title="@string/my_cars" />
	</group>

	<item android:title="@string/more">
		<menu>
			<group android:checkableBehavior="single">
				<item
					android:id="@+id/settings_item"
					android:icon="@drawable/ic_settings"
					android:title="@string/settings" />
			</group>
		</menu>
	</item>
</menu>